# rust-arch-metrics

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: main.rs  models.rs  parser.rs  report.rs
src/metrics/: cbo.rs  lcom.rs  mod.rs  wmc.rs
