[package]
name = "rust-arch-metrics"
version = "0.1.0"
edition = "2021"
description = "CLI tool for measuring architectural metrics in Rust code (LCOM, CBO, WMC)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[[bin]]
name = "rust-arch-metrics"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
